# the-crown-defcon615

./: Dockerfile  LICENSE  README.md  main.ipynb  pyproject.toml  requirements.txt
notebooks/: Conclusion.ipynb  HistoryOfNim.ipynb  MalwareAnalysis.ipynb  NimbleAVExcursion.ipynb  OffensiveNim.ipynb  whoami.ipynb
samples/socket/: socket
samples/src/DNSExfilCosmo/: DNSExfilCosmo.nim  dns-server.py
samples/src/createremotethread/: createremotethread.nim
samples/src/helloworld/: helloworld.nim  nim.cfg
samples/src/shellexec/cpp_shellexec/: cpp_shellexec.sln
samples/src/shellexec/cpp_shellexec/cpp_shellexec/: cpp_shellexec.cpp  cpp_shellexec.vcxproj  cpp_shellexec.vcxproj.filters
samples/src/shellexec/cpp_shellexec/cpp_shellexec/Debug/: cpp_shellexec.exe.recipe  cpp_shellexec.ilk  vc142.idb
samples/src/shellexec/cpp_shellexec/cpp_shellexec/Debug/cpp_shellexec.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  cpp_shellexec.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
samples/src/shellexec/nim_shellexec/: shellexec.nim
samples/src/socket/: socket.nim
src/: __init__.py  digital_rain.py  pe_parse.py
src/MalAPIReader/: MalAPIReader.py  README.md  pyproject.toml  requirements.txt
src/MalAPIReader/utils/: colors.py
