[tool.poetry]
name = "the-crown-defcon615"
version = "0.1.0"
description = ""
authors = ["husky <huskyhacks.mk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^3.2.6"
jupyter = "^1.0.0"
JLDracula = "^0.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
